# templedb

./: .envrc  .gitignore  .mcp.json  AGENT_SESSIONS.md  CATHEDRAL.md  CATHEDRAL_GIT_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  CODE_INTELLIGENCE_STATUS.md  CONSOLIDATION_COMPLETE.md  DATABASE_CONSTRAINTS.md  DEPLOYMENT_RESILIENCE.md  DEPLOYMENT_ROLLBACK.md  DEPLOY_WOOFS.md  DESIGN_PHILOSOPHY.md  ERROR_HANDLING_PHASE1_PROGRESS.md  ERROR_HANDLING_PROGRESS.md  ERROR_HANDLING_STANDARDIZATION.md  FILE_CONFLICTS_ANALYSIS.md  GCS_BACKUP_QUICKSTART.md  GETTING_STARTED.md  GUIDE.md  INDIVIDUAL_SECRETS_COMPLETE.md  MCP_INTEGRATION.md  MIGRATIONS.md  MULTI_AGENT_COORDINATION.md  NIXOPS4_TEMPLATE_INTEGRATION_COMPLETE.md  NIX_CLI_PACKAGING_COMPLETE.md  PHASE2_PARTIAL_COMPLETE.md  PHASE_1_3_COMPLETE.md  PHASE_1_6_COMPLETE.md  PHASE_1_7_COMPLETE.md  PHASE_3_COMPLETE.md  QUERY_BEST_PRACTICES.md  QUERY_OPEN_SUMMARY.txt  QUICKSTART.md  README.md  REFACTORING_COMPLETE_V2.md  RELEASE_NOTES.md  ROADMAP.md  (+59 more)
.claude/: project-context.md
.release-backup-20260223_133219/: ADVANCED.md  CHANGELOG.md  DESIGN_PHILOSOPHY.md  EXAMPLES.md  GUIDE.md  QUICKSTART.md  README.md
.templedb/: config
archive/: CONSOLIDATION_SUMMARY.md  CYCLE_SUMMARY.md  DEPLOYMENT_QUICK_WINS.md  FIXES_APPLIED.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_GAPS_SUMMARY.md  LOGGING_CONVERSION_PROGRESS.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_PHASE_1_COMPLETE.md  NEW_FEATURES.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_FINAL.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_PROGRESS.md  PHASE2_TRANSACTION_PLAN.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PHASE4_COMPLETE.md  PHASE4_PLAN.md  QUICK_WINS_IMPLEMENTATION.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REPOSITORY_MIGRATION_PHASE2_COMPLETE.md  REPOSITORY_MIGRATION_PHASE3_COMPLETE.md  REVIEW_AND_FINDINGS.md  SCHEMA_CHANGES.md  SESSION_SUMMARY.md  VERSION_CONSOLIDATION_PLAN.md  vibe_integration.py.deprecated
assets/: README.md
completions/: README.md  _templedb  templedb.bash
docs/: ANY_KEY_DECRYPTION.md  BACKUP.md  BACKUP_AND_DNS_SUMMARY.md  BACKUP_GOOGLE_CLOUD.md  BEFORE_AFTER_COMPARISON.md  BLOB_STORAGE.md  BLOB_STORAGE_QUICKSTART.md  CHANGELOG_FHS_DEFAULT.md  CLI_DISCOVERABILITY_IMPROVEMENTS.md  CLOUDFLARE_API_TOKEN_SETUP.md  CLOUD_BACKUP_QUICK_START.md  CWD_PROJECT_DISCOVERY.md  DATABASE_CONCURRENCY_FIX.md  DEPLOYED_PROJECTS.md  DEPLOYING_WOOFS.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_ARCHITECTURE_V2.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_EXAMPLE.md  DEPLOYMENT_HOOKS.md  DEPLOYMENT_MODES.md  DEPLOYMENT_QUICK_REF.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_SUMMARY.md  DESIGN_PHILOSOPHY.md  DIRENV_INTEGRATION.md  DNS.md  DNS_API_AUTOMATION.md  DNS_AUTOMATION_SUMMARY.md  DNS_QUICK_REFERENCE.md  DNS_WORKFLOW_DIAGRAM.md  DOMAIN_DNS_MANAGEMENT.md  ERROR_HANDLING.md  ERROR_HANDLING_MIGRATION.md  EXAMPLES.md  FHS_DEFAULT_IMPLEMENTATION.md  FHS_DEPLOYMENTS.md  FHS_FIRST_CLASS_VISION.md  FHS_UX_IMPROVEMENTS.md  (+62 more)
examples/: README.md  automated_deployment.py  bulk_import_projects.py  vibe_interaction_demo.py
migrations/: 002_large_blob_support.sql  003_optimistic_locking.sql  007_add_nix_environments.sql  008_consolidate_metadata.sql  010_consolidate_environment.sql  014_consolidate_duplicate_versions.sql  015_add_var_tag_scope.sql  015_remove_unused_sql_objects.sql  019_add_interactive_agent_mode.sql  020_add_work_items_coordination.sql  021_remove_agent_sessions.sql  025_migrate_work_convoys_to_text_identifiers.sql  026_add_domain_dns_management.sql  027_seed_prompts.py  028_seed_vibe_prompts.py  030_vibe_claude_interactions.sql  031_add_system_deployments.sql  032_add_encryption_and_system_config.sql  032_add_system_config.sql  033_remove_secret_blobs_project_id.sql  034_add_code_intelligence_graph.sql  034_add_deployment_cache.sql  035_add_code_intelligence_graph.sql  036_add_nixops4_integration.sql  037_fix_code_search_fts.sql  038_extend_system_config_scoping.sql  039_create_unified_views.sql  040_safe_cleanup_verified_unused.sql  041_add_deployment_plugins.sql  042_add_nixos_managed_packages.sql  043_rename_plugins_to_deploy_scripts.sql  044_add_checkout_edit_sessions.sql  045_add_git_server_config.sql  046_add_nix_first_support.sql  047_drop_orphaned_convoy_trigger.sql  048_add_readme_cross_reference_system.sql  049_add_deployment_tracking.sql  050_add_deployment_scripts.sql  063_drop_quiz_tables_rename_vibe_sessions.sql  064_add_branch_operations.sql  (+19 more)
roadmap/: .#criticism_agent_dispatch_and_dependency_graph.md  AGENT_DISPATCH_AND_DEPENDENCY_GRAPH_INTEGRATION.md  criticism_agent_dispatch_and_dependency_graph.md
scripts/: deploy-woofs-with-service.sh  dev-server.sh  dogfood_readme_system.py  generate_readme_indexes.py  migrate_checkouts_readonly.py  (+7 more)
(+405 files in other folders)
